--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h1 class="text-lg margin-b-0">Olá! Eu sou  <strong>Filipe A Néis</strong></h1>
             <h5 class="text-tertiary margin-b-40">Desenvolvedor Moblie / Webdeveloper / Analista ADVPL</h5>
             <span data-target="local-scroll"><a href="#resume" class="btn btn-lg btn-primary"><span>Veja meu resumo!</span><i class="ti-arrow-down"></i></a></span>
-            <a href="#" class="btn btn-link"><span>Download meu CV</span><i class="ti-file"></i></a>
+            <a href="/cv/CV-FILIPEAMARALNEIS.pdf" class="btn btn-link"><span>Download meu CV</span><i class="ti-file"></i></a>
         </div>
         
     </section>
