--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <!-- Resume Box / About -->
                     <div class="resume-box">
                         <span class="icon animated" data-animation="fadeInDown"><i class="ti-comment-alt text-tertiary"></i></span>
-                        <h4><strong>About</strong> Me</h4>
+                        <h4><strong>Sobre</strong> Mim</h4>
                         <p class="lead">Sed porttitor nulla eget enim gravida blandit. Integer risus nunc, molestie a nibh in, interdum fringilla urna.</p>
                         <p>Sed lacinia, nibh sit amet auctor vestibulum, enim risus condimentum erat, quis vestibulum mi ligula a nulla. Nulla vitae pharetra tellus. 
                         Aenean ac tincidunt augue, volutpat ullamcorper elit.</p>   
@@ -82,7 +82,7 @@
                     <!-- Resume Box / Skills -->
                     <div class="resume-box">
                         <span class="icon animated" data-animation="fadeInDown"><i class="ti-cup text-tertiary"></i></span>
-                        <h4><strong>Skills</strong> &amp; abilities</h4>
+                        <h4><strong>Skills</strong> &amp; habilidades</h4>
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress progress-animated">
@@ -98,7 +98,7 @@
                                     <span></span>
                                 </div>
                             </div>
-                            <strong>Android</strong>
+                            <strong>Android - Java</strong>
                         </div>
                         <!-- Skill -->
                         <div class="skill">
@@ -127,6 +127,14 @@
                             <strong>Banco de Dados</strong>
                         </div>
                         <!-- Skill -->
+                           <div class="skill">
+                            <div class="progress progress-animated">
+                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                                    <span></span>
+                                </div>
+                            </div>
+                            <strong>PHP</strong>
+                        </div>
                       
                     </div>
 
@@ -149,15 +157,15 @@
                         <div class="speciality">
                             <span class="speciality-icon"><i class="text-muted-2x ti-layers-alt"></i></span>
                             <div class="speciality-content">
-                                <h5 class="margin-b-0">Front-End Development</h5>
-                                <p class="speciaity-description">Great, modern website designes.</p>
+                                <h5 class="margin-b-0">Desenvolvedor Web </h5>
+                                <p class="speciaity-description">Manutenção e desenvolvimeto de sistemas web e sites.</p>
                             </div>
                         </div>
                         <!-- Speciality -->
                         <div class="speciality">
                             <span class="speciality-icon"><i class="text-muted-2x ti-mobile"></i></span>
                             <div class="speciality-content">
-                                <h5 class="margin-b-0">Aplicativos Moblie</h5>
+                                <h5 class="margin-b-0">Aplicativos Mobile</h5>
                                 <p class="speciaity-description">Aplicativos modernos, nativos e hibridos.</p>
                             </div>
                         </div>
@@ -224,6 +232,8 @@
                             </div>
                         </div>
                     </div>
+
+
 
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
