--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h1 class="text-lg margin-b-0">Olá! Eu sou  <strong>Filipe A Néis</strong></h1>
             <h5 class="text-tertiary margin-b-40">Desenvolvedor Moblie / Webdeveloper / Analista ADVPL</h5>
             <span data-target="local-scroll"><a href="#resume" class="btn btn-lg btn-primary"><span>Veja meu resumo!</span><i class="ti-arrow-down"></i></a></span>
-            <a href="https://amaralneis.github.io/cv/CV-FILIPEAMARALNEIS%20.pdf" class="btn btn-link"><span>Download meu CV</span><i class="ti-file"></i></a>
+            <a href="https://amaralneis.github.io/cv/FILIPEAMARALNEIS%20.pdf" class="btn btn-link"><span>Download meu CV</span><i class="ti-file"></i></a>
         </div>
         
     </section>
@@ -140,7 +140,6 @@
 
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
-
                     <!-- Resume Box / Specilities -->
                     <div class="resume-box">
                         <span class="icon animated" data-animation="fadeInDown"><i class="ti-mouse-alt text-tertiary"></i></span>
