--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <li><a href="https://github.com/AmaralNeis" class="icon icon-circle icon-xs icon-github"><i class="fa  fa-github"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/filipe-amaral-néis-00852089" class="icon icon-circle icon-xs icon-linkedin"><i class="fa fa-linkedin"></i></a></li>
             </ul>
-            <h5>Like me on Facebook</h5>
+            <h5>Me de seu like no facebook!</h5>
 
             <div
                 class="fb-like"
@@ -488,6 +488,12 @@
                 <li><a href="https://github.com/AmaralNeis" class="icon icon-xs"><i class="fa fa-github text-muted"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/filipe-amaral-néis-00852089" class="icon icon-xs"><i class="fa fa-linkedin text-muted"></i></a></li>
             </ul>
+            <div
+                class="fb-like"
+                data-share="true"
+                data-width="450"
+                data-show-faces="true">
+            </div>
         </div>
     </div>
     <a href="#" class="mobile-nav-close icon icon-hover icon-xs icon-circle icon-primary" data-target="mobile-nav"><i class="fa fa-times"></i></a>
