ajustes facebook like

--- a/index.html
+++ b/index.html
@@ -488,8 +488,17 @@
                 <li><a href="https://github.com/AmaralNeis" class="icon icon-xs"><i class="fa fa-github text-muted"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/filipe-amaral-néis-00852089" class="icon icon-xs"><i class="fa fa-linkedin text-muted"></i></a></li>
             </ul>
-              <div class="fb-page" data-href="https://www.facebook.com/filipe.amaralneis" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/nutrichatlabs"><a href="https://www.facebook.com/filipe.amaralneis">NutriChat Labs</a></blockquote></div>
+            <div
+                class="fb-like"
+                data-share="true"
+                data-width="450"
+                data-show-faces="true">
+            </div>
+
+            <!-- 
+  <div class="fb-page" data-href="https://www.facebook.com/filipe.amaralneis" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/nutrichatlabs"><a href="https://www.facebook.com/filipe.amaralneis">NutriChat Labs</a></blockquote></div>
               </div>
+        -->
         </div>
     </div>
     <a href="#" class="mobile-nav-close icon icon-hover icon-xs icon-circle icon-primary" data-target="mobile-nav"><i class="fa fa-times"></i></a>
