--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 <li><i class="inline-icon icon-before-and-after text-primary fa fa-skype"></i>filipe-neis</li>
                 <li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>+55(48) 8473 7192</li>
             </ul>
-            <a href="#" class="btn btn-primary" data-target="messenger"><span>Use o formulario para me enviar um e-mail</span><i class="ti-email"></i></a>
+            <a href="#" class="btn btn-primary" data-target="messenger"><span>Enviar um e-mail</span><i class="ti-email"></i></a>
             <h5 class="margin-t-60">Veja minhas redes sociais!</h5>
             <ul class="list-inline">
                 <li><a href="https://www.facebook.com/filipe.amaralneis" class="icon icon-circle icon-xs icon-facebook"><i class="fa fa-facebook"></i></a></li>
@@ -457,7 +457,7 @@
                     <label>Mensagem:</label>
                     <textarea id="message" class="form-control" name="message" rows="2" required></textarea>
                 </div>
-                <button type="submit" id="btEnviaForm" class="btn btn-secondary"><span>Enviar menssagem!</span><i class="ti-email"></i></button>
+                <button type="submit" id="btEnviaForm" class="btn btn-secondary"><span>Enviar mensagem!</span><i class="ti-email"></i></button>
             </form>
         </div>
     </div>
